--- a/port/index3.html
+++ b/port/index3.html
@@ -15,10 +15,13 @@
     <link rel="stylesheet" href="font/font.css">
 </head>
 <body>
-    <section id="contents">
-        <div class="cursor"
+    <div class="cursor"
             data-0 = "opacity: 1;"
             data-800 = "opacity: 0;"></div>
+    <section id="contents">
+        <!-- <div class="cursor"
+            data-0 = "opacity: 1;"
+            data-800 = "opacity: 0;"></div> -->
         <!-- //cursor -->
 
         <div id="section1">
@@ -92,16 +95,16 @@
                 </div>
                 <div class="circlebox">
                     <a class="s2-circleAll circle-wrap1" href="#">
-                        <div class="circle1">view tap-move</div>
+                        <div class="s2-circle1">view tap-move</div>
                     </a>
                     <a class="s2-circleAll circle-wrap2" href="#">
-                        <div class="circle2">view image-sprite</div>
+                        <div class="s2-circle2">view image-sprite</div>
                     </a>
                     <a class="s2-circleAll circle-wrap3" href="#">
-                        <div class="circle3">view slick</div>
+                        <div class="s2-circle3">view slick</div>
                     </a>
                     <a class="s2-circleAll circle-wrap4" href="#">
-                        <div class="circle4">view lightbox</div>
+                        <div class="s2-circle4">view lightbox</div>
                     </a>
                 </div>
                 <div class="left-chromebox">
@@ -217,13 +220,13 @@
                 </div>
                 <div class="circlebox">
                     <a class="s3-circleAll circle-wrap1 s3-circle-w1" href="#">
-                        <div class="circle1">view semantic-tag</div>
+                        <div class="s3-circle1">view semantic-tag</div>
                     </a>
                     <a class="s3-circleAll circle-wrap2 s3-circle-w2" href="#">
-                        <div class="circle2">view mediaquery</div>
+                        <div class="s3-circle2">view mediaquery</div>
                     </a>
                     <a class="s3-circleAll circle-wrap3 s3-circle-w3" href="#">
-                        <div class="circle3">view hover-effect</div>
+                        <div class="s3-circle3">view hover-effect</div>
                     </a>
                 </div>
                 <div class="left-chromebox">
@@ -337,13 +340,13 @@
                 </div>
                 <div class="circlebox2">
                     <a class="s4-circleAll circle-wrap5 s4-circle-w1" href="#">
-                        <div class="circle5">view tap-menu</div>
+                        <div class="s4-circle5">view tap-menu</div>
                     </a>
                     <a class="s4-circleAll circle-wrap6 s4-circle-w2" href="#">
-                        <div class="circle6">view hidden-menu</div>
+                        <div class="s4-circle6">view hidden-menu</div>
                     </a>
                     <a class="s4-circleAll circle-wrap7 s4-circle-w3" href="#">
-                        <div class="circle7">view accordion-menu</div>
+                        <div class="s4-circle7">view accordion-menu</div>
                     </a>
                 </div>
                 <div class="right-chromebox">
@@ -457,13 +460,13 @@
                 </div>
                 <div class="circlebox2">
                     <a class="s5-circleAll circle-wrap5 s5-circle-w1" href="#">
-                        <div class="circle5">view hover-effect</div>
+                        <div class="s5-circle5">view hover-effect</div>
                     </a>
                     <a class="s5-circleAll circle-wrap6 s5-circle-w2" href="#">
-                        <div class="circle6">view grid</div>
+                        <div class="s5-circle6">view grid</div>
                     </a>
                     <a class="s5-circleAll circle-wrap7 s5-circle-w3" href="#">
-                        <div class="circle7">view google-api</div>
+                        <div class="s5-circle7">view google-api</div>
                     </a>
                 </div>
                 <div class="right-chromebox">
@@ -558,23 +561,27 @@
         <!-- //big-title -->
 
         <div id="section6">
-            <div class="section6">
+            <div class="section6"
+            data-2700="background-color: rgb(27,27,27)"
+            data-3040="background-color: rgb(145,174,1)"
+            data-4800="background-color: rgb(145,174,1"
+            data-5040="background-color: rgb(1,126,47)">
                 <div class="bg-text">
                     <div class="aniText1">
-                        <p class="ani1-1">animation &ndash; animation &ndash; animation &ndash; animation &ndash; </p> 
-                        <p class="ani1-2">animation &ndash; animation &ndash; animation &ndash; animation &ndash; </p> 
+                        <p class="ani1-1">welcome &ndash; welcome &ndash; welcome &ndash; welcome &ndash; </p> 
+                        <p class="ani1-2">welcome &ndash; welcome &ndash; welcome &ndash; welcome &ndash; </p> 
                     </div>
                     <div class="collText1">
-                        <p class="collect1-1">collection &ndash; collection &ndash; collection &ndash; collection &ndash; </p> 
-                        <p class="collect1-2">collection &ndash; collection &ndash; collection &ndash; collection &ndash; </p> 
+                        <p class="collect1-1">portfolio &ndash; portfolio &ndash; portfolio &ndash; portfolio &ndash; </p> 
+                        <p class="collect1-2">portfolio &ndash; portfolio &ndash; thinking=thinking+thinking &ndash; thinking=thinking+thinking &ndash; </p> 
                     </div>
                     <div class="collText2">
-                        <p class="collect2-1">collection &ndash; collection &ndash; collection &ndash; collection &ndash; </p>
-                        <p class="collect2-2">collection &ndash; collection &ndash; collection &ndash; collection &ndash; </p>
+                        <p class="collect2-1">portfolio &ndash; portfolio &ndash; portfolio &ndash; portfolio &ndash; </p>
+                        <p class="collect2-2">portfolio &ndash; portfolio &ndash; portfolio &ndash; portfolio &ndash; </p>
                     </div>
                     <div class="aniText2">
-                        <p class="ani2-1">animation &ndash; animation &ndash; animation &ndash; animation &ndash; </p>
-                        <p class="ani2-2">animation &ndash; animation &ndash; animation &ndash; animation &ndash; </p>
+                        <p class="ani2-1">welcome &ndash; welcome &ndash; welcome &ndash; welcome &ndash; </p>
+                        <p class="ani2-2">welcome &ndash; welcome &ndash; welcome &ndash; welcome &ndash; </p>
                     </div>
                 </div>
             </div>
