--- a/port/index3.html
+++ b/port/index3.html
@@ -77,7 +77,7 @@
                 <div class="s2-desc-wrap left-desc-wrap">
                     <div class="s2-desc left-desc">
                         <ul>
-                            <li class="desc-title">webstandard</li>
+                            <li class="desc-title">WEBSTANDARD</li>
                             <li class="desc-desc">
                                 웹 페이지의 기본적인 레이아웃을 바탕으로 웹 접근성을 
                                 위해 스크린 리더기를 고려한 탭 메뉴와 탭 이동을 구성하였고, 
@@ -89,8 +89,8 @@
                         </ul>
                     </div>
                     <div class="btn-wrap">
-                        <div class="btn btn-site"><a href="#">view site</a></div>
-                        <div class="btn btn-figma"><a href="#">view figma</a></div>
+                        <div class="btn btn-site"><a href="../site-webstandard/index.html">view site</a></div>
+                        <div class="btn btn-figma"><a href="https://www.figma.com/file/knnrHvG9ZKTt33OSGKBC3h/webstandard?node-id=0%3A1">view figma</a></div>
                     </div>
                 </div>
                 <div class="circlebox">
@@ -214,8 +214,8 @@
                         </ul>
                     </div>
                     <div class="btn-wrap">
-                        <div class="btn btn-site"><a href="#">view site</a></div>
-                        <div class="btn btn-figma"><a href="#">view figma</a></div>
+                        <div class="btn btn-site"><a href="../site-responsive/index.html">view site</a></div>
+                        <div class="btn btn-figma"><a href="https://www.figma.com/file/zOiT0jACF2pxl4Dke5GNVv/responsive?node-id=0%3A1">view figma</a></div>
                     </div>
                 </div>
                 <div class="circlebox">
@@ -334,8 +334,8 @@
                         </ul>
                     </div>
                     <div class="btn-wrap2">
-                        <div class="btn2 btn-site"><a href="#">view site</a></div>
-                        <div class="btn2 btn-figma"><a href="#">view figma</a></div>
+                        <div class="btn2 btn-site"><a href="../nongshim/index.html">view site</a></div>
+                        <div class="btn2 btn-figma"><a href="https://www.figma.com/file/84c2FQQWw7z1nt1RoQ7TcM/nongshim?node-id=0%3A1">view figma</a></div>
                     </div>
                 </div>
                 <div class="circlebox2">
@@ -454,7 +454,7 @@
                         </ul>
                     </div>
                     <div class="btn-wrap2">
-                        <div class="btn2 btn-site"><a href="#">view site</a></div>
+                        <div class="btn2 btn-site"><a href="../pdtime/main.html">view site</a></div>
                         <div class="btn2 btn-figma"><a href="#">view figma</a></div>
                     </div>
                 </div>
@@ -572,8 +572,8 @@
             data-7050="background-color: rgb(3,52,187)"
             data-7350="background-color: rgb(187,3,178)"
             data-10219="background-color: rgb(187,3,178)"
-            data-10220="background-color: rgb(167,25,12)"
-            data-11244="background-color: rgb(167,25,12)">
+            data-10220="background-color: rgb(27,27,27)"
+            data-11244="background-color: rgb(27,27,27)">
                 <div class="bg-text">
                     <div class="aniText1">
                         <p class="ani1-1">welcome &ndash; welcome &ndash; welcome &ndash; welcome &ndash; </p> 
@@ -594,8 +594,8 @@
                 </div>
                 <div class="ani-box">
                     <div class="ani-wrap"
-                    data-12244="left: 510px"
-                    data-15307="left: -9000px"
+                    data-12244="left: 1497px"
+                    data-15307="left: -6999px"
                     >
                         <div class="box1">box1</div>
                         <div class="box2">box2</div>
