--- a/port/index3.html
+++ b/port/index3.html
@@ -594,8 +594,8 @@
                 </div>
                 <div class="ani-box">
                     <div class="ani-wrap"
-                    data-12244="left: 1497px"
-                    data-15307="left: -6999px"
+                    data-12244="left: 77.969vw"
+                    data-15307="left: -364.531vw"
                     >
                         <div class="box1">box1</div>
                         <div class="box2">box2</div>
