--- a/port/index3.html
+++ b/port/index3.html
@@ -654,7 +654,7 @@
             <div class="parallax">
                 <div class="scriptview-wrap">
                     <div class="view-box">
-                        <img src="img/parallax.jpg" alt="parallax">
+                        <iframe class="iframe" src="../script/parallax/parallax03.html" frameborder="0"></iframe>
                     </div>
                 </div>
                 <div class="script-text">
@@ -665,15 +665,14 @@
                     </p>
                 </div>
                 <div class="script-btn">
-                    <a href="#">01</a>
-                    <a href="#">02</a>
-                    <a href="#">03</a>
-                    <a href="#">04</a>
-                    <a href="#">05</a>
-                    <a href="#">06</a>
-                    <a href="#">07</a>
-                    <a href="#">08</a>
-                    <a href="#">09</a>
+                    <a class="sbtn1 btnactive" href="#">01</a>
+                    <a class="sbtn2" href="#">02</a>
+                    <a class="sbtn3" href="#">03</a>
+                    <a class="sbtn4" href="#">04</a>
+                    <a class="sbtn5" href="#">05</a>
+                    <a class="sbtn6" href="#">06</a>
+                    <a class="sbtn7" href="#">07</a>
+                    <a class="sbtn8" href="#">08</a>
                 </div>
                 <div class="script-num">
                     <span class="snum1">01</span>
