--- a/script/parallax/parallax03.html
+++ b/script/parallax/parallax03.html
@@ -179,7 +179,7 @@
             opacity: 1; transform: translateY(0);
         }
 
-        .infor4 {position: fixed; right: 0; bottom: 50px; z-index: 1000; padding: 20px;}
+        .infor4 {position: fixed; right: 0; bottom: 2%; z-index: 1000; padding: 20px;}
         .infor4 a {color: #fff; border: 1px solid #fff; border-radius: 30px; padding: 5px 10px}
         .infor4 .modal {
             background: rgba(0,0,0,0.8);
@@ -203,19 +203,17 @@
 </head>
 <body>
     <div class="title">
-        <h1>Parallax03</h1>
+        <h1>Parallax01</h1>
         <p>Parallax Effect<br>-jQuery</p>
         <ul>
-            <li><a href="parallax01.html">parallax01</a></li>
-            <li><a href="parallax02.html">parallax02</a></li>
-            <li class="active"><a href="parallax03.html">parallax03</a></li>
-            <li><a href="parallax04.html">parallax04</a></li>
-            <li><a href="parallax05.html">parallax05</a></li>
-            <li><a href="parallax06.html">parallax06</a></li>
-            <li><a href="parallax07.html">parallax07</a></li>
-            <li><a href="parallax08.html">parallax08</a></li>
-            <li><a href="parallax09.html">parallax09</a></li>
-            <li><a href="parallax10.html">parallax10</a></li>
+            <li class="active"><a href="parallax03.html">parallax01</a></li>
+            <li><a href="parallax04.html">parallax02</a></li>
+            <li><a href="parallax05.html">parallax03</a></li>
+            <li><a href="parallax06.html">parallax04</a></li>
+            <li><a href="parallax07.html">parallax05</a></li>
+            <li><a href="parallax08.html">parallax06</a></li>
+            <li><a href="parallax09.html">parallax07</a></li>
+            <li><a href="parallax10.html">parallax08</a></li>
         </ul>
     </div>
 
