--- a/script/parallax/parallax06.html
+++ b/script/parallax/parallax06.html
@@ -178,7 +178,7 @@
             font-family: "Abel";
         }
 
-        .infor4 {position: fixed; right: 0; bottom: 50px; z-index: 1000; padding: 20px;}
+        .infor4 {position: fixed; right: 0; bottom: 8%; z-index: 1000; padding: 20px;}
         .infor4 a {color: #fff; border: 1px solid #fff; border-radius: 30px; padding: 5px 10px}
         .infor4 .modal {
             background: rgba(0,0,0,0.8);
@@ -207,19 +207,17 @@
     </div>
 
     <div class="title">
-        <h1>Parallax06</h1>
+        <h1>Parallax04</h1>
         <p>이질감 효과<br>- javascript</p>
         <ul>
-            <li><a href="parallax01.html">parallax01</a></li>
-            <li><a href="parallax02.html">parallax02</a></li>
-            <li><a href="parallax03.html">parallax03</a></li>
-            <li><a href="parallax04.html">parallax04</a></li>
-            <li><a href="parallax05.html">parallax05</a></li>
-            <li class="active"><a href="parallax06.html">parallax06</a></li>
-            <li><a href="parallax07.html">parallax07</a></li>
-            <li><a href="parallax08.html">parallax08</a></li>
-            <li><a href="parallax09.html">parallax09</a></li>
-            <li><a href="parallax10.html">parallax10</a></li>
+            <li><a href="parallax03.html">parallax01</a></li>
+            <li><a href="parallax04.html">parallax02</a></li>
+            <li><a href="parallax05.html">parallax03</a></li>
+            <li class="active"><a href="parallax06.html">parallax04</a></li>
+            <li><a href="parallax07.html">parallax05</a></li>
+            <li><a href="parallax08.html">parallax06</a></li>
+            <li><a href="parallax09.html">parallax07</a></li>
+            <li><a href="parallax10.html">parallax08</a></li>
         </ul>
     </div>
 
