--- a/script/parallax/parallax09.html
+++ b/script/parallax/parallax09.html
@@ -255,7 +255,7 @@
             100% {width: 100%; left: 0; height: 0%; bottom: 100%;}
         }
         
-        .infor4 {position: fixed; right: 0; bottom: 50px; z-index: 1000; padding: 20px;}
+        .infor4 {position: fixed; right: 0; bottom: 8%; z-index: 1000; padding: 20px;}
         .infor4 a {color: #fff; border: 1px solid #fff; border-radius: 30px; padding: 5px 10px}
         .infor4 .modal {
             background: rgba(0,0,0,0.8);
@@ -284,19 +284,17 @@
     </div>
 
     <div class="title">
-        <h1>Parallax09</h1>
+        <h1>Parallax07</h1>
         <p>Reveal 효과</p>
         <ul>
-            <li><a href="parallax01.html">parallax01</a></li>
-            <li><a href="parallax02.html">parallax02</a></li>
-            <li><a href="parallax03.html">parallax03</a></li>
-            <li><a href="parallax04.html">parallax04</a></li>
-            <li><a href="parallax05.html">parallax05</a></li>
-            <li><a href="parallax06.html">parallax06</a></li>
-            <li><a href="parallax07.html">parallax07</a></li>
-            <li><a href="parallax08.html">parallax08</a></li>
-            <li class="active"><a href="parallax09.html">parallax09</a></li>
-            <li><a href="parallax10.html">parallax10</a></li>
+            <li><a href="parallax03.html">parallax01</a></li>
+            <li><a href="parallax04.html">parallax02</a></li>
+            <li><a href="parallax05.html">parallax03</a></li>
+            <li><a href="parallax06.html">parallax04</a></li>
+            <li><a href="parallax07.html">parallax05</a></li>
+            <li><a href="parallax08.html">parallax06</a></li>
+            <li class="active"><a href="parallax09.html">parallax07</a></li>
+            <li><a href="parallax10.html">parallax08</a></li>
         </ul>
     </div>
 
