--- a/port/index3.html
+++ b/port/index3.html
@@ -604,7 +604,7 @@
                                 <p>morphing</p>
                                 animation
                             </div>
-                            <iframe style="width: 350px; height: 350px;" src="https://cdpn.io/hyunjin22/debug/poJMpwW/vWkRwRYBEbeM" frameborder="0"></iframe>
+                            <div class="morphing"></div>
                         </div>
                         <div class="boxAll box2">
                             <div class="tribox1"></div>
@@ -613,7 +613,7 @@
                                 <p>square</p>
                                 animation
                             </div>
-                            <iframe style="width: 400px; height: 400px;" src="https://cdpn.io/hyunjin22/debug/vYNLzLX/GnMnbOgjxgwM" frameborder="0"></iframe>
+                            <div class="square"></div>
                         </div>
                         <div class="boxAll box3">
                             <div class="rectbox2"></div>
@@ -622,7 +622,128 @@
                                 <p>wave </p>
                                 animation
                             </div>
-                            <iframe style="width: 450px; height: 450px;" src="https://cdpn.io/hyunjin22/debug/xxwZJLm/ZoABazOPvngr" frameborder="0"></iframe>
+                            <div class="wave-wrap">
+                                <div class="wave-box">
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                </div>
+                                <div class="wave-box">
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                </div>
+                                <div class="wave-box">
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                </div>
+                                <div class="wave-box">
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                </div>
+                                <div class="wave-box">
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                </div>
+                                <div class="wave-box">
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                </div>
+                                <div class="wave-box">
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                </div>
+                                <div class="wave-box">
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                </div>
+                                <div class="wave-box">
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                </div>
+                                <div class="wave-box">
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                  <div class="wavecircle"></div>
+                                </div>
+                              </div>
                         </div>
                         <div class="boxAll box4">
                             <div class="tribox2"></div>
@@ -631,7 +752,16 @@
                                 <p>cube</p>
                                 animation
                             </div>
-                            <iframe style="width: 450px; height: 501px;" src="https://cdpn.io/hyunjin22/debug/oNjbPYx/xnkabZajPJwM" frameborder="0"></iframe>
+                            <!-- <div class="cube-wrap">
+                                <div class="cube-box">
+                                    <div class="cube"></div>
+                                    <div class="cube"></div>
+                                    <div class="cube"></div>
+                                    <div class="cube"></div>
+                                    <div class="cube"></div>
+                                    <div class="cube"></div>
+                                </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -676,6 +806,62 @@
                 </div>
                 <div class="script-num">
                     <span class="snum1">01</span>
+                    <span class="snum2">03</span>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="scriptview-wrap">
+                    <div class="view-box">
+                        <iframe class="iframe2" src="../slider/slide01.html" frameborder="0"></iframe>
+                    </div>
+                </div>
+                <div class="script-text">
+                    <h2>slide</h2>
+                    <h3>what</h3>
+                    <p>
+                        Image Slide는 웹 사이트에서 자주 사용되는 스크립트이며, slide의 ‘미끄러지다’ 라는 뜻 처럼 고정된 이미지를 미끄러지게 하여 웹 사이트에 생동감을 주며, 사용자에게 쉽게 정보를 제공할 수 있습니다. 
+                    </p>
+                </div>
+                <div class="script-btn">
+                    <a class="slidebtn sbtn1 btnactive" href="#">01</a>
+                    <a class="slidebtn sbtn2" href="#">02</a>
+                    <a class="slidebtn sbtn3" href="#">03</a>
+                    <a class="slidebtn sbtn4" href="#">04</a>
+                    <a class="slidebtn sbtn5" href="#">05</a>
+                    <a class="slidebtn sbtn6" href="#">06</a>
+                    <a class="slidebtn sbtn7" href="#">07</a>
+                    <a class="slidebtn sbtn8" href="#">08</a>
+                </div>
+                <div class="script-num">
+                    <span class="snum1">02</span>
+                    <span class="snum2">03</span>
+                </div>
+            </div>
+            <div class="mouse">
+                <div class="scriptview-wrap">
+                    <div class="view-box">
+                        <iframe class="iframe3" src="../mouse/mouse01.html" frameborder="0"></iframe>
+                    </div>
+                </div>
+                <div class="script-text">
+                    <h2>mouse</h2>
+                    <h3>what</h3>
+                    <p>
+                        Interaction은 사용자와 서비스간의 상호작용을 뜻하며, Mouse는 상호작용을 위한 중요한 수단입니다. Mouse에 다양한 효과를 주게 되면 컨텐츠에 대한 집중을 높일 수 있습니다. 
+                    </p>
+                </div>
+                <div class="script-btn">
+                    <a class="mousebtn sbtn1 btnactive" href="#">01</a>
+                    <a class="mousebtn sbtn2" href="#">02</a>
+                    <a class="mousebtn sbtn3" href="#">03</a>
+                    <a class="mousebtn sbtn4" href="#">04</a>
+                    <a class="mousebtn sbtn5" href="#">05</a>
+                    <a class="mousebtn sbtn6" href="#">06</a>
+                    <a class="mousebtn sbtn7" href="#">07</a>
+                    <a class="mousebtn sbtn8" href="#">08</a>
+                </div>
+                <div class="script-num">
+                    <span class="snum1">03</span>
                     <span class="snum2">03</span>
                 </div>
             </div>
