--- a/port/index3.html
+++ b/port/index3.html
@@ -599,7 +599,7 @@
                     >
                         <div class="boxAll box1">
                             <div class="rectbox1"></div>
-                            <a class="code-btn" href="#">code</a>
+                            <a class="code-btn" href="https://codepen.io/hyunjin22/pen/poJMpwW">code</a>
                             <div class="ani-title">
                                 <p>morphing</p>
                                 animation
@@ -608,7 +608,7 @@
                         </div>
                         <div class="boxAll box2">
                             <div class="tribox1"></div>
-                            <a class="right-code-btn" href="#">code</a>
+                            <a class="right-code-btn" href="https://codepen.io/hyunjin22/pen/vYNLzLX">code</a>
                             <div class="ani-title right-ani-title">
                                 <p>square</p>
                                 animation
@@ -617,7 +617,7 @@
                         </div>
                         <div class="boxAll box3">
                             <div class="rectbox2"></div>
-                            <a class="code-btn" href="#">code</a>
+                            <a class="code-btn" href="https://codepen.io/hyunjin22/pen/xxwZJLm">code</a>
                             <div class="ani-title">
                                 <p>wave </p>
                                 animation
@@ -747,11 +747,12 @@
                         </div>
                         <div class="boxAll box4">
                             <div class="tribox2"></div>
-                            <a class="right-code-btn" href="#">code</a>
+                            <a class="right-code-btn" href="https://codepen.io/hyunjin22/pen/MWaqYGg">code</a>
                             <div class="ani-title right-ani-title">
-                                <p>cube</p>
+                                <p>step</p>
                                 animation
                             </div>
+                            <div class="step"></div>
                             <!-- <div class="cube-wrap">
                                 <div class="cube-box">
                                     <div class="cube"></div>
