--- a/port/index3.html
+++ b/port/index3.html
@@ -561,19 +561,7 @@
         <!-- //big-title -->
 
         <div id="section6">
-            <div class="section6"
-            data-0="background-color: rgb(27,27,27)"
-            data-900="background-color: rgb(27,27,27)"
-            data-901="background-color: rgb(240,183,11)"
-            data-3000="background-color: rgb(240,183,11)"
-            data-3200="background-color: rgb(0,163,49)"
-            data-4900="background-color: rgb(0,163,49)"
-            data-5200="background-color: rgb(3,52,187)"
-            data-7050="background-color: rgb(3,52,187)"
-            data-7350="background-color: rgb(187,3,178)"
-            data-10219="background-color: rgb(187,3,178)"
-            data-10220="background-color: rgb(27,27,27)"
-            data-11244="background-color: rgb(27,27,27)">
+            <div class="section6">
                 <div class="bg-text">
                     <div class="aniText1">
                         <p class="ani1-1">welcome &ndash; welcome &ndash; welcome &ndash; welcome &ndash; </p> 
@@ -592,6 +580,18 @@
                         <p class="ani2-2">welcome &ndash; welcome &ndash; welcome &ndash; welcome &ndash; </p>
                     </div>
                 </div>
+                <!-- data-0="background-color: rgb(27,27,27)"
+            data-900="background-color: rgb(27,27,27)"
+            data-901="background-color: rgb(240,183,11)"
+            data-3000="background-color: rgb(240,183,11)"
+            data-3200="background-color: rgb(0,163,49)"
+            data-4900="background-color: rgb(0,163,49)"
+            data-5200="background-color: rgb(3,52,187)"
+            data-7050="background-color: rgb(3,52,187)"
+            data-7350="background-color: rgb(187,3,178)"
+            data-10219="background-color: rgb(187,3,178)"
+            data-10220="background-color: rgb(27,27,27)"
+            data-11244="background-color: rgb(27,27,27)" -->
                 <div class="ani-box">
                     <div class="ani-wrap"
                     data-12244="left: 99.010vw"
